--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -15,6 +15,8 @@ import PandasIcon from "../icons/PandasIcon.astro";
 import NumpyIcon from "../icons/NumpyIcon.astro";
 import ScikitLearnIcon from "../icons/ScikitLearnIcon.astro";
 import StreamlitIcon from "../icons/StreamlitIcon.astro";
+import HadoopIcon from "../icons/HadoopIcon.astro";
+import SparkIcon from "../icons/SparkIcon.astro";
 ---
 
 <Tittle title="Skills" />
@@ -120,8 +122,12 @@ import StreamlitIcon from "../icons/StreamlitIcon.astro";
     <h3 class="mb-4 font-bold">Learning</h3>
     <div class="flex flex-col gap-4">
       <div class="flex items-center gap-2">
-        <PythonIcon class="w-6 h-6" />
-        <span>Python</span>
+        <HadoopIcon class="w-6 h-6" />
+        <span>Apache Hadoop</span>
+      </div>
+      <div class="flex items-center gap-2">
+        <SparkIcon class="w-6 h-6" />
+        <span>Apache Spark</span>
       </div>
     </div>
   </div>
