Refactor image paths in Header and MainLayout components

--- a/src/components/Headling.astro
+++ b/src/components/Headling.astro
@@ -40,7 +40,7 @@ import CVIcon from '../icons/CVIcon.astro';
         GitHub
       </SocialPill>
   
-      <SocialPill href="/public/Gabriel_Leon_Castro_CV.pdf">
+      <SocialPill href="/Gabriel_Leon_Castro_CV.pdf">
         <CVIcon class="w-6 h-6 md:w-8 md:h-8" />
         Download CV
       </SocialPill>
