Fix file extension for profile photo in Header component

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,7 +2,7 @@
   <div class="flex items-center">
     <img
       class="w-12 h-12 md:w-16 md:h-16 p-1 rounded-full ring-2 ring-gray-500 dark:ring-gray-600"
-      src="/images/Gabriel_Leon_Photo.jpg"
+      src="/images/Gabriel_Leon_Photo.JPG"
       alt="Gabriel Leon"
     />
   </div>
