Refactor SVG icons to optimize code

--- a/src/icons/PowerBIIcon.astro
+++ b/src/icons/PowerBIIcon.astro
@@ -1,57 +1,1 @@
-<svg 
-  {...Astro.props}
-	xmlns="http://www.w3.org/2000/svg" 
-	fill="none" 
-	preserveAspectRatio="xMidYMid"
-  width="256" height="250" 
-	viewBox="0 0 96 84">
-  <defs>
-    <linearGradient id="c" x1="66.5" x2="38.5" y1="90.5" y2="8" gradientUnits="userSpaceOnUse">
-      <stop stop-color="#E6AD10"/>
-      <stop offset="1" stop-color="#F2C811"/>
-    </linearGradient>
-    <linearGradient id="d" x1="46" x2="79.299" y1="-5.469" y2="90.713" gradientUnits="userSpaceOnUse">
-      <stop stop-color="#E6AD10"/>
-      <stop offset="1" stop-color="#C87E0E"/>
-    </linearGradient>
-    <linearGradient id="g" x1="36.998" x2="61.786" y1="46" y2="93.593" gradientUnits="userSpaceOnUse">
-      <stop stop-color="#F6D751"/>
-      <stop offset="1" stop-color="#E6AD10"/>
-    </linearGradient>
-    <linearGradient id="h" x1="23.998" x2="39.527" y1="64" y2="108.11" gradientUnits="userSpaceOnUse">
-      <stop stop-color="#F9E589"/>
-      <stop offset="1" stop-color="#F6D751"/>
-    </linearGradient>
-    <filter id="e">
-      <feFlood flood-opacity="0" result="BackgroundImageFix"/>
-      <feBlend in="SourceGraphic" in2="BackgroundImageFix" result="shape"/>
-      <feGaussianBlur result="effect1_foregroundBlur" stdDeviation=".4"/>
-    </filter>
-    <filter id="f">
-      <feFlood flood-opacity="0" result="BackgroundImageFix"/>
-      <feBlend in="SourceGraphic" in2="BackgroundImageFix" result="shape"/>
-      <feGaussianBlur result="effect1_foregroundBlur" stdDeviation="4"/>
-    </filter>
-    <clipPath id="a">
-      <path fill="#fff" d="M0 0h96v96H0z"/>
-    </clipPath>
-  </defs>
-  <g clip-path="url(#a)" transform="translate(0 -12)">
-    <mask id="b" width="96" height="84" x="0" y="12" mask-type="alpha" maskUnits="userSpaceOnUse">
-      <path fill="#c4c4c4" d="M1.172 34.828A4 4 0 0 0 0 37.657V80a4 4 0 0 0 4 4h20v8a4 4 0 0 0 4 4h40a4 4 0 0 0 4-4v-8h20a4 4 0 0 0 4-4V16a4 4 0 0 0-4-4H25.657a4 4 0 0 0-2.829 1.172z"/>
-    </mask>
-    <g mask="url(#b)">
-      <path fill="url(#c)" d="M0 84V12h96v72z" style="fill:url(#c)"/>
-      <path fill="#f9e589" d="M24 12v20a4 4 0 0 1-4 4H0Z"/>
-      <path fill="url(#d)" d="M72 32v64H54a4 4 0 0 1-4-4V32a4 4 0 0 1 4-4h14a4 4 0 0 1 4 4z" style="fill:url(#d)"/>
-      <g filter="url(#e)">
-        <path fill="#000" fill-opacity=".2" d="M59 96.4v-46a4 4 0 0 0-4-4H41a4 4 0 0 0-4 4v14h-9a4 4 0 0 0-4 4v28z"/>
-      </g>
-      <g filter="url(#f)">
-        <path fill="#000" fill-opacity=".18" d="M59 98V52a4 4 0 0 0-4-4H41a4 4 0 0 0-4 4v14h-9a4 4 0 0 0-4 4v28z"/>
-      </g>
-      <path fill="url(#g)" d="M59 50v46H41a4 4 0 0 1-4-4V50a4 4 0 0 1 4-4h14a4 4 0 0 1 4 4z" style="fill:url(#g)"/>
-      <path fill="url(#h)" d="M24 68v28h22V68a4 4 0 0 0-4-4H28a4 4 0 0 0-4 4z" style="fill:url(#h)"/>
-    </g>
-  </g>
-</svg>
+<svg {...Astro.props} xmlns="http://www.w3.org/2000/svg" fill="none" preserveAspectRatio="xMidYMid" viewBox="0 0 96 84"><defs><linearGradient id="c" x1="66.5" x2="38.5" y1="90.5" y2="8" gradientUnits="userSpaceOnUse"><stop stop-color="#E6AD10"/><stop offset="1" stop-color="#F2C811"/></linearGradient><linearGradient id="d" x1="46" x2="79.3" y1="-5.5" y2="90.7" gradientUnits="userSpaceOnUse"><stop stop-color="#E6AD10"/><stop offset="1" stop-color="#C87E0E"/></linearGradient><linearGradient id="g" x1="37" x2="61.8" y1="46" y2="93.6" gradientUnits="userSpaceOnUse"><stop stop-color="#F6D751"/><stop offset="1" stop-color="#E6AD10"/></linearGradient><linearGradient id="h" x1="24" x2="39.5" y1="64" y2="108.1" gradientUnits="userSpaceOnUse"><stop stop-color="#F9E589"/><stop offset="1" stop-color="#F6D751"/></linearGradient><filter id="e"><feFlood flood-opacity="0" result="BackgroundImageFix"/><feBlend in="SourceGraphic" in2="BackgroundImageFix" result="shape"/><feGaussianBlur result="effect1_foregroundBlur" stdDeviation=".4"/></filter><filter id="f"><feFlood flood-opacity="0" result="BackgroundImageFix"/><feBlend in="SourceGraphic" in2="BackgroundImageFix" result="shape"/><feGaussianBlur result="effect1_foregroundBlur" stdDeviation="4"/></filter><clipPath id="a"><path fill="#fff" d="M0 0h96v96H0z"/></clipPath></defs><g clip-path="url(#a)" transform="translate(0 -12)"><mask id="b" width="96" height="84" x="0" y="12" mask-type="alpha" maskUnits="userSpaceOnUse"><path fill="#c4c4c4" d="M1 35a4 4 0 0 0-1 3v42a4 4 0 0 0 4 4h20v8a4 4 0 0 0 4 4h40a4 4 0 0 0 4-4v-8h20a4 4 0 0 0 4-4V16a4 4 0 0 0-4-4H26a4 4 0 0 0-3 1z"/></mask><g mask="url(#b)"><path fill="url(#c)" d="M0 84V12h96v72z" style="fill:url(#c)"/><path fill="#f9e589" d="M24 12v20a4 4 0 0 1-4 4H0Z"/><path fill="url(#d)" d="M72 32v64H54a4 4 0 0 1-4-4V32a4 4 0 0 1 4-4h14a4 4 0 0 1 4 4z" style="fill:url(#d)"/><g filter="url(#e)"><path fill="#000" fill-opacity=".2" d="M59 96V50a4 4 0 0 0-4-4H41a4 4 0 0 0-4 4v14h-9a4 4 0 0 0-4 4v28z"/></g><g filter="url(#f)"><path fill="#000" fill-opacity=".2" d="M59 98V52a4 4 0 0 0-4-4H41a4 4 0 0 0-4 4v14h-9a4 4 0 0 0-4 4v28z"/></g><path fill="url(#g)" d="M59 50v46H41a4 4 0 0 1-4-4V50a4 4 0 0 1 4-4h14a4 4 0 0 1 4 4z" style="fill:url(#g)"/><path fill="url(#h)" d="M24 68v28h22V68a4 4 0 0 0-4-4H28a4 4 0 0 0-4 4z" style="fill:url(#h)"/></g></g></svg>
