--- a/src/icons/TensorFlowIcon.astro
+++ b/src/icons/TensorFlowIcon.astro
@@ -1,3 +1,1 @@
-<svg {...Astro.props} xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 128 128">
-  <path d="m61.55 128-21.84-12.68V40.55L6.81 59.56l.08-28.32L61.55 0zM66.46 0v128l21.84-12.68V79.31l16.49 9.53-.1-24.63-16.39-9.36v-14.3l32.89 19.01-.08-28.32z" fill="#ff6f00" />
-</svg>
+<svg {...Astro.props} xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 128"><path fill="#ff6f00" d="m61.5 128-21.8-12.7V40.5l-32.9 19V31.3L61.7 0zm5-128v128l21.8-12.7v-36l16.5 9.5-.1-24.6L88.3 55V40.6l32.9 19V31.2z"/></svg>
